# P8-Data-Analyst

./: .gitignore  README.md  pyproject.toml
.obsidian/: workspace.json
data/processed/: homogenizacion_metadata.txt
data/raw/: URL_Origen_data.PROYECTO_DATA_ANALYST_Análisis_y_visualización_de_datos.20260414143541M.txt  madrid_airbnb.xlsx  milan_airbnb.xlsx
docs/: README.20260417095448V.md  README.Temp.20260504203351L.md  guion_P8_Data_Analyst_v2.md  informe_conclusiones_EDA.20260417095426V.md  laboratorio_personal_jj.20260427094654L.md
docs/prompts/: 00b_comparacion_csv_xlsx.md  Anular Facturación Google Cloud.20260420130015L.docx  Equipo_Data_Analysis.PropuestaDeIdeaColaborativa.P8-Data-Analyst.20260418110014S.docx  GitClone.Delo-sangeles-Data_Analysis.parte1.de1.20260501044426V.docx  GitPush.P8-Data-Analyst.parte1.de5.20260417150732V.docx  GitPush.P8-Data-Analyst.parte3.de5.20260424110314V.docx  GitPush.P8-Data-Analyst.parte4.de5.20260430090043J.docx  GitPush.P8-Data-Analyst.parte5.de5.20260505093037M.docx  NuevaPlantilla.TC.20260414094719M.docx  P8-Data-Analyst.20260414134628M.docx  ipynb.20260416142303J.docx  (+9 more)
issues/: issue_00b_bug.20260427143342L.md
notebooks/: 00_homogenizacion.ipynb  01_eda.ipynb  01_eda_airbnb.ipynb
scripts_py/: tree_fromfile.py
scripts_sh/: P8_Data_Analysis.kanban_debug.20260416102006J.sh  P8_Data_Analysis.kanban_download.20260416110535J.sh  P8_Data_Analysis.kanban_lab_setup.20260416115138J.sh  P8_Data_Analysis.kanban_update.20260416044353J.sh  P8_Data_Analysis.sync_and_push.20260415114054X.sh  push_docs_v2.sh  setup_github_repo.sh
(+13 files in other folders)
